fix: bootstrap ui database table add column field overflow

--- a/themes/bootstrap/scss/_common.scss
+++ b/themes/bootstrap/scss/_common.scss
@@ -2509,7 +2509,7 @@ input#auto_increment_opt {
 
 #table_name_col_no {
   position: fixed;
-  top: 55px;
+  top: 100px !important;
   width: 100%;
   background: #fff;
 }
